Fixed some aligning issues

--- a/Responsive-Web-Design/Applied-Responsive-Web-Design-Projects/02-Build-a-Tribute-Page/css/style.css
+++ b/Responsive-Web-Design/Applied-Responsive-Web-Design-Projects/02-Build-a-Tribute-Page/css/style.css
@@ -34,6 +34,10 @@ footer a {
   text-decoration: none;
   color: rgba(45, 45, 45, 0.4)
 }
-footer a:hover {
+a:hover {
   color: green;
+}
+aside {
+  text-align: center;
+
 }
